--- a/paper/main.tex
+++ b/paper/main.tex
@@ -501,17 +501,17 @@ of the Hessian.
   clip=false
 ]
 \addplot[draw=none, fill=blue, fill opacity=0.1] coordinates {(0,0) (0,2.5) (3,2.5) (3,0)};
-\addplot[draw=none, fill=white] {2*(1-2*x)/(1-x-x^2)} \closedcycle;
-\addplot[draw=none, fill=red, fill opacity=0.1] {2*(1-2*x)/(1-x-x^2)} \closedcycle;
+\addplot[draw=none, fill=white, domain=0:3] {4/(2+3*x)} \closedcycle;
+\addplot[draw=none, fill=red, fill opacity=0.1, domain=0:3] {4/(2+3*x)} \closedcycle;
 
-\addplot[thick, black] {2*(1-2*x)/(1-x-x^2)};
-\addplot[thick, black, dashed] {4/(2+3*x)};
+\addplot[thick, black, domain=0:0.45] {2*(1-2*x)/(1-x-x^2)};
+\addplot[thick, black, dashed, domain=0:3] {4/(2+3*x)};
 
 \node[blue!60!black, font=\bfseries] at (axis cs:1.5, 1.8) {All minima global};
 \node[red!60!black, font=\bfseries, align=center] at (axis cs:0.5, 0.4) {Spurious\\minima exist};
 
-\node[circle, fill, inner sep=2pt] at (axis cs:1, 0.8) {};
-\node[anchor=south west, font=\footnotesize] at (axis cs:1, 0.8) {$\gamma_\star = 4/5$};
+\node[circle, fill, inner sep=2pt] at (axis cs:0.25, 1.4545) {};
+\node[anchor=south west, font=\footnotesize] at (axis cs:0.25, 1.4545) {$\delta = 1/4$};
 
 \end{axis}
 \end{tikzpicture}
