--- a/paper/main.tex
+++ b/paper/main.tex
@@ -498,7 +498,7 @@ of the Hessian.
   ymin=0, ymax=2.5,
   domain=0:3, samples=200,
   no markers,
-  clip=false
+  clip=true
 ]
 \addplot[draw=none, fill=blue, fill opacity=0.1] coordinates {(0,0) (0,2.5) (3,2.5) (3,0)};
 \addplot[draw=none, fill=white, domain=0:3] {4/(2+3*x)} \closedcycle;
