--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1108,7 +1108,8 @@ property.
 \subsection{Empirical validation on real data}\label{sec:mnist}
 
 To test whether the phase transition predicted by our theory persists beyond synthetic
-Gaussian data, we run the gradient flow experiment on whitened MNIST digits. We subsample
+Gaussian data, we run the gradient flow experiment on whitened MNIST digits
+(Figure~\ref{fig:mnist}). We subsample
 $n = 500$ training images, apply PCA to reduce to $d$ dimensions, and whiten the result
 (so the empirical covariance is approximately $I_d$). We then sweep $\gamma = m/n$ from
 $0.2$ to $2.0$ for $\delta \in \{0.05, 0.10, 0.15\}$, training two-layer ReLU networks
@@ -1177,7 +1178,8 @@ yielding the generalized critical ratio:
   \gamma_\star(\delta, \sigma) = \frac{2}{\kappa(\sigma)(2 + 3\delta)}.
 \end{equation}
 For ReLU, $\kappa(\mathrm{ReLU}) = 1/2$, and this recovers
-$\gamma_\star = 4/(2 + 3\delta)$.
+$\gamma_\star = 4/(2 + 3\delta)$. Table~\ref{tab:kappa} lists $\kappa(\sigma)$ and
+the resulting $\gamma_\star$ for several standard activations.
 
 \begin{table}[htbp]
   \centering
@@ -1370,7 +1372,8 @@ of neural network training is driven not by the absence of bad critical points, 
 the inductive biases of the optimizer that steer trajectories away from them.
 
 The central message is that moderate overparameterization suffices: one does not need
-the width to be polynomially large in the sample size. The threshold is $m = \Theta(n)$,
+the width to be polynomially large in the sample size (Figure~\ref{fig:spurious-count}).
+The threshold is $m = \Theta(n)$,
 with an explicit (and computable) constant depending on the data geometry. For isotropic
 data, the critical ratio is $\gamma_\star(\delta) = 2(1-2\delta)/(1-\delta-\delta^2)$
 for $\delta < 1/2$, well-approximated by $4/(2+3\delta)$ for small~$\delta$.
